# rag-wm

./: .gitignore  README.md  pyproject.toml  requirements.txt
adversaries/naive-extraction/: extract.py  ragwm_extract.py  schema.py  sentinel_extract.py  ward_extract.py
baselines/ragwm/: Statistic of Watermark.xlsx  __init__.py  requirement.txt  watermark.py
baselines/ragwm/entity_generate/: generate_entity_llm_check.py  generate_hash_entity.py
baselines/ragwm/model_configs/: gpt3.5_config.json  gpt3.5_config_para.json  llama13b_config.json  llama7b_config.json  palm2_config.json  qwen_config.json  vicuna7b_config.json
baselines/ragwm/rag/: vectorstore.py
baselines/ragwm/src/: main.py  prompt_define.py  utils.py  watermark_role.py
baselines/ragwm/src/models/: GPT.py  Llama.py  PaLM2.py  Vicuna.py  __init__.py
baselines/sentinel/: LICENSE  __init__.py  pyproject.toml  watermark.py
baselines/sentinel/models/: qwen2.5.json
baselines/sentinel/models.example/: gemini-3.1-flash-lite.json  gpt-5-mini.json  gpt-5-nano.json
baselines/sentinel/src/sentinelrag/: __init__.py
baselines/sentinel/src/sentinelrag/cli/: __init__.py  build_chroma.py  detect_watermark.py  eval_interference.py  generate_embeddings.py  generate_ko_pool.py  inject_watermark.py  load_chroma.py
baselines/sentinel/src/sentinelrag/core/: __init__.py  attack.py  detector.py  injector.py  interference.py  ko_pool.py
baselines/sentinel/src/sentinelrag/prompts/: __init__.py  templates.py
baselines/sentinel/src/sentinelrag/rag/: __init__.py  vectorstore.py  visitor.py
baselines/sentinel/src/sentinelrag/utils/: __init__.py  datasets.py  embeddings.py  io.py  llm_client.py  logging.py  model_registry.py  paths.py  sampling.py  stats.py  text.py
baselines/sentinel/tests/: test_imports.py  test_model_registry.py
baselines/ward/: __init__.py  driver.py  pyproject.toml  watermark.py
baselines/ward/configs/: example.yaml
baselines/ward/configs/model/: deepseek1.5b.yaml
baselines/ward/kgw/: normalizers.py
baselines/ward/src/: rag_system.py
baselines/ward/src/attackers/: facts_attacker.py
baselines/ward/src/models/: api_model.py  utils.py
eval/scripts/: compare.py  wm_survive_rate.py
evaluation/: compare.py  datasets.py  llm.py  pipeline.py  scheme.py  survive_rate.py
run/: compare.py  datasets.py  pipeline.py  schema.py  survive_rate.py
