[project]
name = "watermarks-eval"
version = "0.1.0"
description = "Single unified environment for the watermark extraction-attack comparison (WARD + RAG-WM + SentinelRAG)."
readme = "README.md"
requires-python = ">=3.12"


dependencies = [

    "torch>=2.7.0",
    "transformers>=4.41,<5",
    "numpy<2",
    "scipy>=1.11",
    "sentence-transformers>=3.4.1",
    "tokenizers",
    "accelerate>=0.26.0",
    "datasets>=3.2.0",
    "beir",
    "chromadb==0.5.20",
    "pandas",
    "pyarrow",
    "tqdm",
    "pyyaml",
    "python-dotenv",

    "openai>=1.59.5",
    "anthropic>=0.42.0",
    "together>=1.4.1",

    "pydantic>=2.10.4",
    "pymilvus>=2.5.4",
    "sentencepiece>=0.2.0",
    "sacremoses>=0.1.1",
    "antlr4-python3-runtime==4.11",
    "matplotlib>=3.8",

    "langchain-experimental",
    "langchain-openai",

    "sentinelrag",
]

[tool.uv]

package = false


[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu128" }
sentinelrag = { path = "baselines/sentinel", editable = true }
