[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sentinelrag"
version = "0.1.0"
description = "Watermark generation, injection, detection, and interference evaluation for RAG corpora."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "SentinelRAG Authors" }
]
dependencies = [
  "beir",
  "chromadb",
  "datasets",
  "numpy<2",
  "openai",
  "pandas",
  "pyarrow",
  "python-dotenv",
  "scipy",
  "sentence-transformers",
  "tokenizers",
  "torch",
  "tqdm",
  "transformers",
]

[project.optional-dependencies]
translation = ["googletrans==4.0.0rc1"]
dev = ["pytest", "ruff"]

[project.scripts]
sentinelrag-generate-ko-pool = "sentinelrag.cli.generate_ko_pool:main"
sentinelrag-inject-watermark = "sentinelrag.cli.inject_watermark:main"
sentinelrag-detect-watermark = "sentinelrag.cli.detect_watermark:main"
sentinelrag-eval-interference = "sentinelrag.cli.eval_interference:main"
sentinelrag-build-chroma = "sentinelrag.cli.build_chroma:main"
sentinelrag-download-beir = "sentinelrag.cli.datasets.download:main"
sentinelrag-download-hf = "sentinelrag.cli.datasets.download_hf:main"
sentinelrag-generate-embeddings = "sentinelrag.cli.generate_embeddings:main"
sentinelrag-load-chroma = "sentinelrag.cli.load_chroma:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["sentinelrag*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
